{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 76,
  "lineage": "56eadc8f-b78f-15ed-118e-30bc2d709be3",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "petclinic-app-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "petclinic-subnet-tf-eu-west1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    }
  ]
}